fixed html overflow

--- a/less/basic.less
+++ b/less/basic.less
@@ -11,6 +11,10 @@
  */
 
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0; // IE Reset
   background: @backgroundColor;
